--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,33 @@
             name="description"
             content="Web site created using create-react-app"
         />
-        <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+
+        <meta property="og:title" content="Little Lemon Home" />
+        <meta property="og:type" content="website" />
+        <meta property="og:image" content="#" />
+        <meta property="og:url" content="#" />
+        <meta property="og:description" content="" />
+        <meta property="og:locale" content="US" />
+        <meta property="og:site_name" content="Little Lemon" />
+
+        <link
+            rel="apple-touch-icon"
+            sizes="180x180"
+            href="/apple-touch-icon.png"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="32x32"
+            href="/favicon-32x32.png"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="16x16"
+            href="/favicon-16x16.png"
+        />
+
         <!--
             manifest.json provides metadata used when your web app is installed on a
             user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
